--- a/src/style.css
+++ b/src/style.css
@@ -1,37 +1,46 @@
-body{
-    font-family: 'Georama', sans-serif;
+body {
+  font-family: "Georama", sans-serif;
 }
-ul{
-        display: inline;
-        padding-top: 30px;
+ul {
+  display: inline;
+  padding-top: 30px;
+}
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+  text-transform: capitalize;
 }
 
-li{
-    list-style: none;
-    text-transform: capitalize;
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  border: 1px solid orange;
+  padding: 30px;
+  border-radius: 5px;
+}
+.sunny {
+  width: 60px;
+}
+.temp {
+  font-size: 40px;
+}
+.left {
+  float: left;
+}
+.weath-temp img {
+  margin-right: 14px;
+}
+.cels {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+.weath-temp .active {
+  color: black;
 
+  cursor: default;
 }
-
-.weather-app{
-    max-width: 600px;
-    margin: 30px auto;
-    border: 1px solid orange;
-    padding: 30px;
-    border-radius: 5px;
-}
-.sunny{
-    width: 60px;
-}
-.temp{
-    font-size: 40px;
-}
-.left{
-    float: left;
-}
-.weath-temp img{
-margin-right: 14px;
-}
-.cels{
-    margin-top: 10px;
-    margin-left:5px ;
+.weath-temp .active:hover {
+  text-decoration: none;
 }
