Displayed the forecast date using the API

--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,13 @@ li {
 
   cursor: default;
 }
+.weather-forecast {
+  text-align: center;
+}
 .weath-temp .active:hover {
   text-decoration: none;
+}
+.forecast-temp {
+  color: orangered;
+  font-weight: bold;
 }
