--- a/src/style.css
+++ b/src/style.css
@@ -2,26 +2,49 @@ body {
   font-family: "Georama", sans-serif;
 }
 ul {
-  display: inline;
   padding-top: 30px;
 }
 a {
   text-decoration: none;
 }
 li {
+  text-align: left;
   list-style: none;
   text-transform: capitalize;
 }
+h1 {
+  color: rgb(236, 110, 76);
+  font-weight: 600;
+}
+a {
+  color: rgb(236, 110, 76);
+}
 
-.weather-app {
+.source {
+  text-align: center;
+}
+small,
+.source {
+  margin-bottom: 100px;
+}
+
+img,
+.image {
+  display: block;
+  margin: -10px -16px;
+}
+.source {
   max-width: 600px;
   margin: 30px auto;
+}
+.weather-app {
   border: 1px solid orange;
   padding: 30px;
   border-radius: 5px;
 }
+
 .sunny {
-  width: 60px;
+  width: 85px;
 }
 .temp {
   font-size: 40px;
@@ -48,6 +71,12 @@ li {
   text-decoration: none;
 }
 .forecast-temp {
-  color: orangered;
+  color: rgb(236, 110, 76);
   font-weight: bold;
+}
+.col-2,
+.blabla {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 7px;
+  margin-left: 14px;
 }
